--- a/package.json
+++ b/package.json
@@ -1,60 +1,230 @@
 {
-  "name": "coc-als",
-  "version": "0.0.0-development",
-  "description": "Ada Language Server support for coc.nvim",
-  "author": "Sylvain Leclercq <sylvain.leclercq@external.thalesgroup.com>",
-  "license": "MIT",
-  "main": "lib/index.js",
-  "keywords": [
-    "coc.nvim"
-  ],
-  "engines": {
-    "coc": "^0.0.80"
-  },
-  "scripts": {
-    "lint": "eslint src --ext ts",
-    "clean": "rimraf lib",
-    "watch": "node esbuild.js --watch",
-    "build": "node esbuild.js",
-    "prepare": "node esbuild.js"
-  },
-  "prettier": {
-    "singleQuote": true,
-    "printWidth": 120,
-    "semi": true
-  },
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.8.2",
-    "@typescript-eslint/parser": "^4.8.2",
-    "coc.nvim": "^0.0.80",
-    "esbuild": "^0.8.42",
-    "eslint": "^7.14.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "prettier": "^2.2.0",
-    "rimraf": "^3.0.2",
-    "typescript": "^4.1.2"
-  },
-  "activationEvents": [
-    "*"
-  ],
-  "contributes": {
-    "configuration": {
-      "type": "object",
-      "title": "coc-als configuration",
-      "properties": {
-        "coc-als.enabled": {
-          "type": "boolean",
-          "default": true,
-          "description": "Enable coc-als extension"
-        }
-      }
+    "name": "coc-als",
+    "version": "0.0.1-development",
+    "description": "Ada Language Server support for coc.nvim",
+    "author": "Sylvain Leclercq <sylvain.leclercq@external.thalesgroup.com>",
+    "license": "MIT",
+    "main": "lib/index.js",
+    "keywords": [
+        "coc.nvim"
+    ],
+    "engines": {
+        "coc": "^0.0.80"
     },
-    "commands": [
-      {
-        "command": "coc-als.Command",
-        "title": "coc-als command title"
-      }
-    ]
-  }
+    "scripts": {
+        "lint": "eslint src --ext ts",
+        "clean": "rimraf lib",
+        "watch": "node esbuild.js --watch",
+        "build": "node esbuild.js",
+        "prepare": "node esbuild.js"
+    },
+    "prettier": {
+        "singleQuote": true,
+        "printWidth": 120,
+        "semi": true
+    },
+    "devDependencies": {
+        "@typescript-eslint/eslint-plugin": "^4.8.2",
+        "@typescript-eslint/parser": "^4.8.2",
+        "coc.nvim": "^0.0.80",
+        "esbuild": "^0.8.42",
+        "eslint": "^7.14.0",
+        "eslint-config-prettier": "^8.1.0",
+        "eslint-plugin-prettier": "^3.1.4",
+        "prettier": "^2.2.0",
+        "rimraf": "^3.0.2",
+        "typescript": "^4.1.2"
+    },
+    "activationEvents": [
+        "*"
+    ],
+    "contributes": {
+        "languages": [
+            {
+                "id": "ada",
+                "aliases": [
+                    "Ada",
+                    "ada"
+                ],
+                "extensions": [
+                    ".ada",
+                    ".adb",
+                    ".adc",
+                    ".ads"
+                ],
+                "configuration": "./language-configuration.json"
+            },
+            {
+                "id": "ali",
+                "aliases": [
+                    "ALI",
+                    "Ali",
+                    "ali",
+                    "Ada Library Information"
+                ],
+                "extensions": [
+                    ".ali"
+                ]
+            },
+            {
+                "id": "gpr",
+                "aliases": [
+                    "GNAT Project",
+                    "gpr"
+                ],
+                "extensions": [
+                    ".gpr"
+                ],
+                "configuration": "./gpr-language-configuration.json"
+            }
+        ],
+        "grammars": [
+            {
+                "language": "ada",
+                "scopeName": "source.ada",
+                "path": "./advanced/ada.tmLanguage.json"
+            },
+            {
+                "language": "ali",
+                "scopeName": "source.ali",
+                "path": "./syntaxes/ali.tmLanguage.json"
+            },
+            {
+                "language": "gpr",
+                "scopeName": "source.gpr",
+                "path": "./syntaxes/gpr.tmLanguage.json"
+            }
+        ],
+        "snippets": [
+            {
+                "language": "ada",
+                "path": "./ada-snippets.json"
+            },
+            {
+                "language": "gpr",
+                "path": "./gpr-snippets.json"
+            }
+        ],
+        "configuration": [
+            {
+                "type": "object",
+                "title": "Ada configuration",
+                "properties": {
+                    "ada.enabled": {
+                        "type": "boolean",
+                        "default": true,
+                        "description": "Enable Ada Extension"
+                    },
+                    "ada.trace.server": {
+                        "scope": "window",
+                        "type": "string",
+                        "enum": [
+                            "off",
+                            "messages",
+                            "verbose"
+                        ],
+                        "default": "off",
+                        "description": "Traces the communication between CoC.nvim and the language server."
+                    },
+                    "ada.projectFile": {
+                        "scope": "resource",
+                        "type": "string",
+                        "default": "",
+                        "description": "Project file (*.gpr) for given workspace."
+                    },
+                    "ada.scenarioVariables": {
+                        "scope": "resource",
+                        "type": "object",
+                        "default": {},
+                        "description": "Scenario variables."
+                    },
+                    "ada.defaultCharset": {
+                        "scope": "resource",
+                        "type": "string",
+                        "default": "iso-8859-1",
+                        "description": "The character set to use while reading files from disk."
+                    },
+                    "ada.displayMethodAncestryOnNavigation": {
+                        "scope": "resource",
+                        "type": "string",
+                        "enum": [
+                            "never",
+                            "usage_and_abstract_only",
+                            "definition_only",
+                            "always"
+                        ],
+                        "enumDescriptions": [
+                            "Never list overridding and/or overridden suprograms.",
+                            "List overridding and/or overridden suprograms on dispatching calls and on abstract subprogram declarations.",
+                            "List overridding and/or overridden suprograms on declarations only.",
+                            "Always list overridding and/or overridden suprograms when possible."
+                        ],
+                        "default": "usage_and_abstract_only",
+                        "description": "Controls the policy for displaying overriding and overridden subprograms on navigation requests such as 'Go To Definition' or 'Go To Implementations'."
+                    },
+                    "ada.enableDiagnostics": {
+                        "scope": "resource",
+                        "type": "boolean",
+                        "default": true,
+                        "description": "The emission of diagnostics."
+                    },
+                    "ada.renameInComments": {
+                        "scope": "resource",
+                        "type": "boolean",
+                        "default": false,
+                        "description": "Enable editing Ada comments while executing `textDocument/rename` reques."
+                    }
+                }
+            }
+        ],
+        "problemMatchers": [
+            {
+                "name": "ada",
+                "label": "Gnat Ada Problem Matcher",
+                "fileLocation": [
+                    "autoDetect",
+                    "${workspaceRoot}"
+                ],
+                "pattern": [
+                    {
+                        "regexp": "^([^:]:?[^:]*):(\\d+):(\\d+):\\s+(warning|)(?:[:]\\s+)?(.*)$",
+                        "file": 1,
+                        "line": 2,
+                        "column": 3,
+                        "severity": 4,
+                        "message": 5
+                    }
+                ]
+            }
+        ],
+        "taskDefinitions": [
+            {
+                "type": "gprbuild",
+                "required": [
+                    "projectFile"
+                ],
+                "properties": {
+                    "projectFile": {
+                        "type": "string",
+                        "description": "The project file"
+                    },
+                    "checkFile": {
+                        "type": "boolean",
+                        "description": "Just check the current file only"
+                    }
+                }
+            }
+        ],
+        "commands": [
+            {
+                "command": "ada.otherFile",
+                "title": "Go to other Ada file"
+            }
+        ]
+    },
+    "dependencies": {
+        "process": "^0.11.10",
+        "vscode-languageclient": "^7.0.0",
+        "vscode-languageserver-protocol": "^3.16.0"
+    }
 }
