--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "semi": true
     },
     "devDependencies": {
+        "@types/node": "^16.10.3",
         "@typescript-eslint/eslint-plugin": "^4.8.2",
         "@typescript-eslint/parser": "^4.8.2",
         "coc.nvim": "^0.0.80",
@@ -105,78 +106,76 @@
                 "path": "./gpr-snippets.json"
             }
         ],
-        "configuration": [
-            {
-                "type": "object",
-                "title": "Ada configuration",
-                "properties": {
-                    "ada.enabled": {
-                        "type": "boolean",
-                        "default": true,
-                        "description": "Enable Ada Extension"
-                    },
-                    "ada.trace.server": {
-                        "scope": "window",
-                        "type": "string",
-                        "enum": [
-                            "off",
-                            "messages",
-                            "verbose"
-                        ],
-                        "default": "off",
-                        "description": "Traces the communication between CoC.nvim and the language server."
-                    },
-                    "ada.projectFile": {
-                        "scope": "resource",
-                        "type": "string",
-                        "default": "",
-                        "description": "Project file (*.gpr) for given workspace."
-                    },
-                    "ada.scenarioVariables": {
-                        "scope": "resource",
-                        "type": "object",
-                        "default": {},
-                        "description": "Scenario variables."
-                    },
-                    "ada.defaultCharset": {
-                        "scope": "resource",
-                        "type": "string",
-                        "default": "iso-8859-1",
-                        "description": "The character set to use while reading files from disk."
-                    },
-                    "ada.displayMethodAncestryOnNavigation": {
-                        "scope": "resource",
-                        "type": "string",
-                        "enum": [
-                            "never",
-                            "usage_and_abstract_only",
-                            "definition_only",
-                            "always"
-                        ],
-                        "enumDescriptions": [
-                            "Never list overridding and/or overridden suprograms.",
-                            "List overridding and/or overridden suprograms on dispatching calls and on abstract subprogram declarations.",
-                            "List overridding and/or overridden suprograms on declarations only.",
-                            "Always list overridding and/or overridden suprograms when possible."
-                        ],
-                        "default": "usage_and_abstract_only",
-                        "description": "Controls the policy for displaying overriding and overridden subprograms on navigation requests such as 'Go To Definition' or 'Go To Implementations'."
-                    },
-                    "ada.enableDiagnostics": {
-                        "scope": "resource",
-                        "type": "boolean",
-                        "default": true,
-                        "description": "The emission of diagnostics."
-                    },
-                    "ada.renameInComments": {
-                        "scope": "resource",
-                        "type": "boolean",
-                        "default": false,
-                        "description": "Enable editing Ada comments while executing `textDocument/rename` reques."
-                    }
+        "configuration": {
+            "type": "object",
+            "title": "Ada configuration",
+            "properties": {
+                "ada.enabled": {
+                    "type": "boolean",
+                    "default": true,
+                    "description": "Enable Ada Extension"
+                },
+                "ada.trace.server": {
+                    "scope": "window",
+                    "type": "string",
+                    "enum": [
+                        "off",
+                        "messages",
+                        "verbose"
+                    ],
+                    "default": "off",
+                    "description": "Traces the communication between CoC.nvim and the language server."
+                },
+                "ada.projectFile": {
+                    "scope": "resource",
+                    "type": "string",
+                    "default": "",
+                    "description": "Project file (*.gpr) for given workspace."
+                },
+                "ada.scenarioVariables": {
+                    "scope": "resource",
+                    "type": "object",
+                    "default": {},
+                    "description": "Scenario variables."
+                },
+                "ada.defaultCharset": {
+                    "scope": "resource",
+                    "type": "string",
+                    "default": "iso-8859-1",
+                    "description": "The character set to use while reading files from disk."
+                },
+                "ada.displayMethodAncestryOnNavigation": {
+                    "scope": "resource",
+                    "type": "string",
+                    "enum": [
+                        "never",
+                        "usage_and_abstract_only",
+                        "definition_only",
+                        "always"
+                    ],
+                    "enumDescriptions": [
+                        "Never list overridding and/or overridden suprograms.",
+                        "List overridding and/or overridden suprograms on dispatching calls and on abstract subprogram declarations.",
+                        "List overridding and/or overridden suprograms on declarations only.",
+                        "Always list overridding and/or overridden suprograms when possible."
+                    ],
+                    "default": "usage_and_abstract_only",
+                    "description": "Controls the policy for displaying overriding and overridden subprograms on navigation requests such as 'Go To Definition' or 'Go To Implementations'."
+                },
+                "ada.enableDiagnostics": {
+                    "scope": "resource",
+                    "type": "boolean",
+                    "default": true,
+                    "description": "The emission of diagnostics."
+                },
+                "ada.renameInComments": {
+                    "scope": "resource",
+                    "type": "boolean",
+                    "default": false,
+                    "description": "Enable editing Ada comments while executing `textDocument/rename` reques."
                 }
             }
-        ],
+        },
         "problemMatchers": [
             {
                 "name": "ada",
@@ -223,6 +222,7 @@
         ]
     },
     "dependencies": {
+        "fs": "^0.0.1-security",
         "process": "^0.11.10",
         "vscode-languageclient": "^7.0.0",
         "vscode-languageserver-protocol": "^3.16.0"
